--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,31 @@
+body{
+	margin: 0;
+}
+#container {
+    margin: 0 auto;
+}
 
-#woo{
-	color: red;
+#sidebar {
+    float: right;
+    width: 15%;
+    height: 80vh;
+    background: #909898;
+}
+
+#content {
+    height: 80vh;
+    width: 85%;
+    overflow: hidden;
+    background: #256c34;
+    background: -webkit-linear-gradient(#256c34, #12461c); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(#256c34, #12461c); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(#256c34, #12461c); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(#256c34, #12461c);
+}
+
+#bottombar{
+	border-top: solid 1px #000;
+	background: #909898;
+    width: 100%;
+    height: 20vh;
 }
