--- a/css/style.css
+++ b/css/style.css
@@ -29,3 +29,20 @@ body{
     width: 100%;
     height: 20vh;
 }
+
+
+/*Bottom buttons*/
+
+#button-wrapper{
+  position: relative;
+  height: 100%;
+}
+#hit, #stay{
+    cursor: pointer;
+    color: #fff;
+    font-size: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
